# FRF_LASSO

./: .gitignore  README.md  pyproject.toml
data/: current.npy  frequencies.txt  non-stationary_impedance_discharge.npy  voltage.npy
scripts/: 1_single_spectra_rational_poly_fit.py  1b_load_single_spectra_rational_poly_fit.py  2_multiple_starts_single_spectrum_rational_poly_fit.py  2b_load_multiple_starts_single_spectrum_rational_poly_fit.py  3_sequential_rational_poly_fit.py  3b_load_sequential_rational_poly_fit.py  effect_starting_point.py  fit_model_selection.py  fit_multistart.py  fit_sequential.py  fit_simultaneous.py  fit_single_spectrum.py  fitting_consistency_inspector.py  inspect_simultanous_fit_params.py  inspect_simultanous_fit_results.py  visualize_fit_and_error.py
src/: data_loaders.py  data_savers.py  fit_statistics.py  obj_functions.py  rational_poly_models.py  routines.py  simultaneous_routines.py  slider_fit_plot.py  transformations.py
src/frf_lasso/: __init__.py  fitting.py  io.py  models.py  objective.py  simultaneous.py  statistics.py  transformations.py  visualization.py
