[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "frf-lasso"
version = "0.1.0"
description = "Rational polynomial fitting for electrochemical impedance spectra with L1 regularization"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "lmfit>=1.2",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
]

[tool.setuptools.packages.find]
where = ["src"]
